# tournament-generator

./: README.md  db.sqlite3  manage.py  pyproject.toml
authentication/: tests.py  urls.py  views.py
authentication/templates/: login.html  signup.html
static/js/: utils.js
static/styles/: styles.css  theme.css
templates/: home.html  layout.html
tournamentGenerator/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
tournaments/: __init__.py  admin.py  models.py  urls.py  views.py
tournaments/migrations/: 0001_initial.py  0002_match_competitor_1_match_competitor_2_match_pool_and_more.py  0003_remove_tournament_ongoing_tournament_state_and_more.py  0004_tournament_use_pools_alter_tournament_location.py  0005_tournament_winner.py  0006_alter_match_unique_together_alter_tournament_date_and_more.py  0007_rename_nb_participants_tournament_max_nb_participants.py  0008_tournament_nb_participants.py
tournaments/templates/: generate_tournament.html  tournament_details.html  tournaments.html
tournaments/tests/: test_models.py
users/: admin.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_fencer_discipline_referee_nb_tournaments_officiated_and_more.py  0003_competitor_profil_pic_competitor_tournament_and_more.py  0004_alter_competitor_nb_tournaments_won_and_more.py  0005_fencer_club.py  0006_alter_competitor_ranking.py
users/templates/: generate_user.html  referees.html  user_details.html  users.html
